worked through list of improvements - everything up to contact us section and colour of text boxes

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 
                         <img src="img/slider/image2.png" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
-                        <div class="text-center tp-caption v-caption-big-white sfl stl"
-                            data-x="200"
+                        <div class="text-center tp-caption v-smash-text-large v-caption-big-white sfl stl"
+                            data-x="250"
                             data-y="245"
                             data-speed="600"
                             data-start="600"
@@ -116,13 +116,13 @@
                             data-elementdelay="0"
                             data-endelementdelay="0"
                             data-endspeed="300">
-                                Commercially Minded Accountants	
+                                Commercial Accountants
                             <br />
                                 for Entrepreneurial Businesses
                         </div>
 
-                        <div class="text-center tp-caption v-caption-h1 sfl stl"
-                            data-x="175"
+                        <div class="text-justify v-smash-text-large tp-caption v-caption-h1 sfl stl"
+                            data-x="200"
                             data-y="360"
                             data-speed="700"
                             data-start="1200"
@@ -132,12 +132,10 @@
                             data-elementdelay="0"
                             data-endelementdelay="0"
                             data-endspeed="300">
-                            Sterling Accounting Solutions are a dynamic, <br />
-                            fast-growing accountancy practice specialising in <br />
-                            business planning, advisory and support services <br />
-                            for SME’s. Based in Hertfordshire, but with a  <br />
-                            client base spread across the UK, our clients  <br />
-                            operate in a wide variety of industries including  <br />
+                            Sterling Accounting Solutions are a dynamic, fast-growing accountancy <br />
+                            practice specialising in business planning, advisory and support services <br />
+                            for SME’s. Based in Hertfordshire, but with a client base spread across <br />
+                            the UK, our clients operate in a wide variety of industries including  <br />
                             recruitment, construction, manufacturing, wholesale distribution and IT. 
                         </div>
 
@@ -146,10 +144,41 @@
             </div>
 
             <div class="shadow-right"></div>
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-sm-6">
+
+                        <div class="values-box values-box-thin testimonial-box-home">
+                            <div class="feature-box-text text-center clearfix">
+                                <h3>Tom McLoughlin – CEO of MAC’s Plasterboard Systems Ltd</h3>
+                                <div class="feature-box-text-inner text-justify padding-30">
+                                    Sterling Accounting Solutions Limited have been have working with our company now for over a year. During that time, we have received excellent service and advice.
+                                    Sterling Accounting Solutions have consistently supplied reliable insight and guidance - particularly in the management of our cash flow and in negotiating on our behalf with external lenders.
+                                    Their combination of expertise, client service and value is a great asset to our company. We view SAS as a <b>trusted and valued business partner</b>.
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-sm-6">
+
+                        <div class="values-box values-box-thin testimonial-box-home">
+                            <div class="feature-box-text text-center clearfix">
+                                <h3>Jamie Mitchell – Group MD of SSA Group</h3>
+                                <div class="feature-box-text-inner text-justify padding-30">
+                                    Having worked closely with SAS Ltd for close to 15 years now, I cannot compliment their work highly enough. They have always proved to be incredibly reliable, able to guide us as a business with any new legislation and provide us with the most up to date detail required. On top of this, they are very personable & understanding to our needs and have gone above and beyond what I would typically expect from an accounting firm. They really do understand us as a business and I would highly recommend them as a <b>professional business willing to go that extra mile</b>.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
-
-
         <!--Testimonials-->
+        <!--
         <div class="v-page-wrap no-bottom-spacing">
             <div class="container" id="testimonials">
 
@@ -206,6 +235,7 @@
 
         <div class="v-spacer col-sm-12 v-height-standard"></div>
         <div class="v-spacer col-sm-12 v-height-standard"></div>
+        -->
 
         <!--Experience-->
         <div class="v-page-wrap no-bottom-spacing">
@@ -233,17 +263,17 @@
                 <div class="row">
                     <ul>
                         <li>
-                            <p class="text-center">
+                            <p class="text-left margin-left-30">
 ● Qualified accountants command high salaries which most SME’s simply cannot absorb into their business
                             </p>
                         </li>
                         <li>
-                            <p class="text-center">
+                            <p class="text-left margin-left-30">
 ● Small businesses are unlikely to provide sufficient workload to keep a full time accountant busy - it just isn’t economic to be paying an accountants wages to cover simple administrative tasks 
                             </p>
                         </li>
                         <li>
-                            <p class="text-center">
+                            <p class="text-left margin-left-30">
 ● Most small business owners are entrepreneurial by nature and therefore do not come from a financial background. Because of this they can be unaware of the added value a skilled accountant can bring to their business
                             </p>
                         </li>
@@ -253,13 +283,15 @@
                 <div class="row">
                     <p class="v-lead text-justify">
 We found that SME’s therefore often just employ qualified accountants to help with the basics, being year-end accounts and tax returns. Although few clients have complained of a lack of choice in these areas, most do complain that the services provided are expensive, impersonal and often uninformative. 
-Spotting an opportunity, we have developed a flexible service, which is a fraction of the cost of employing a full-time accountant and offers far more than the typical one visit a year accountancy practice:
+Spotting an opportunity, we have developed a flexible service, which is a fraction of the cost of employing a full-time accountant and offers far more than the typical one visit a year accountancy practice.
                     </p>
                 </div>
             </div>
         </div>
         <!-- End expierences -->
 
+        <div class="v-spacer col-sm-12 v-height-standard"></div>
+        <div class="v-spacer col-sm-12 v-height-standard"></div>
         <!--Master-plan-->
         <div class="v-page-wrap no-bottom-spacing">
 
@@ -285,22 +317,22 @@ Spotting an opportunity, we have developed a flexible service, which is a fracti
                     <div>
                         <ul>
                             <li>
-                                <p>
+                                <p class="text-left margin-left-30">
 ● Regular Visits – we won’t just visit your office for a coffee and chat once a quarter, we believe regular visits are imperative so you get to know us and realise we are always available for advice and guidance. These regular visits also enable us to supply you with real-time information that is vital for making business decisions 
                                 </p>
                             </li>
                             <li>
-                                <p>
+                                <p class="text-left margin-left-30">
 ● More than just the basics – we’re more than happy to do the basics, but we won’t stop there. Business plan’s, cash flows, negotiating with lenders will all be part of the service
                                 </p>
                             </li>
                             <li>
-                                <p>
+                                <p class="text-left margin-left-30">
 ● Affordable fixed fees – we will agree these at the outset and because they are fixed, you won’t have to worry about us charging you for that 15 minutes we spent replying to your email
                                 </p>
                             </li>
                             <li>
-                                <p>
+                                <p class="text-left margin-left-30">
 ● Technological Innovation – having seen the benefits first hand, we fully embrace new technology such as cloud based accounting and we encourage our clients to do the same
                                 </p>
                             </li>
@@ -321,13 +353,13 @@ Spotting an opportunity, we have developed a flexible service, which is a fracti
                     <div class="col-sm-12">
 
                         <div class="v-content-wrapper">
-                            <p class="v-smash-text-large-2x" style="color: #FFFFFF;">
+                            <p class="v-smash-text-large text-center" style="color: #FFFFFF;">
                                 <span>Services</span>
                             </p>
 
                             <div class="horizontal-break"></div>
 
-                            <p class="lead" style="color: #FFFFFF;">
+                            <p class="v-lead" style="color: #FFFFFF;">
 We offer a broad range of financial and accountancy services to all of our clients. An example of some of the services on offer are given below:
                             </p>
 
@@ -419,6 +451,9 @@ We offer a broad range of financial and accountancy services to all of our clien
         </div>
         <!--End Services-->
 
+        <!-- spacer -->
+        <div class="v-spacer col-sm-12 v-height-standard"></div>
+        <div class="v-spacer col-sm-12 v-height-standard"></div>
 
         <!-- VALUES -->
         <div id="values" class="v-page-wrap no-bottom-spacing">
@@ -440,23 +475,26 @@ We offer a broad range of financial and accountancy services to all of our clien
 
                 <div class="row features">
 
-                    <div class="col-md-2 col-md-offset-1">
+                    <div class="col-md-4">
                         <div class="values-box values-box-thin">
                             <div class="feature-box-text text-center clearfix">
                                 <h3>Mutually Beneficial Relationships</h3>
-                                <div class="feature-box-text-inner text-justify">
+                                <div class="feature-box-text-inner text-justify" style="font-size:11px;">
     Develop long term relationships that benefit all parties involved.
     Ensure that the needs of our clients are at the forefront of everything we do.
+    <br />
+    <br />
+    <br />
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-md-2">
+                    <div class="col-md-4">
                         <div class="values-box values-box-thin">
                             <div class="text-center feature-box-text clearfix">
                                 <h3>Honesty & Integrity</h3>
-                                <div class="text-justify feature-box-text-inner">
+                                <div class="text-justify feature-box-text-inner" style="font-size:11px;">
     Be straightforward and truthful in all our dealings.
     Willing to take on board new ideas, information and suggestions.
     Do not misrepresent ourselves or associate ourselves with misleading or false information.
@@ -465,23 +503,27 @@ We offer a broad range of financial and accountancy services to all of our clien
                         </div>
                     </div>
 
-                    <div class="col-md-2">
+                    <div class="col-md-4">
                         <div class="values-box values-box-thin">
                             <div class="text-center feature-box-text clearfix">
                                 <h3>Objectivity</h3>
-                                <div class="text-justify feature-box-text-inner">
+                                <div class="text-justify feature-box-text-inner" style="font-size:11px;">
     Always have regard to the facts and considerations relevant to the task at hand.
     Never allow bias, self-interest or personal gain to override our actions.
+    <br />
+    <br />
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
 
-                    <div class="col-md-2">
+                <div class="row features">
+                    <div class="col-md-4 col-md-offset-2">
                         <div class="values-box values-box-thin">
                             <div class="text-center feature-box-text clearfix">
                                 <h3>Professional Competence</h3>
-                                <div class="text-justify feature-box-text-inner">
+                                <div class="text-justify feature-box-text-inner" style="font-size:11px;">
     Ensure compliance with applicable laws, regulations and standards;
     Constantly strive to enhance our skills, knowledge and experience as required to provide a professional service.
                                 </div>
@@ -489,11 +531,11 @@ We offer a broad range of financial and accountancy services to all of our clien
                         </div>
                     </div>
 
-                    <div class="col-md-2">
+                    <div class="col-md-4">
                         <div class="values-box values-box-thin">
                             <div class="text-center feature-box-text clearfix">
                                 <h3>Respect</h3>
-                                <div class="text-justify feature-box-text-inner">
+                                <div class="text-justify feature-box-text-inner" style="font-size: 11px;">
     Behave in a professional manner at all times.
     Encourage an inclusive working environment where others are treated with dignity and respect.
                                 </div>
@@ -506,11 +548,11 @@ We offer a broad range of financial and accountancy services to all of our clien
         <!-- End values -->
 
         <!--Recruitment-->
-        <div class="v-parallax v-bg-stylish" id="recruitment">
+        <div class="v-bg-stylish" id="recruitment">
             <div class="container">
                 <div class="row app-brief">
                     <div class="col-sm-12">
-                        <p class="v-smash-text-large-2x pull-top text-center">
+                        <p class="v-smash-text-large pull-top text-center">
                             <span>Recruitment</span>
                         </p>
                         <div class="horizontal-break"></div>
@@ -525,6 +567,11 @@ We know you don’t become an experienced accountant overnight, so that’s why 
                         <p class="v-lead text-center">
 If you are interested in becoming part of the team, then please send across an up to date CV along with a cover letter to <a href="mailto:will@sas-accountants.com">Will@sas-accountants.com</a>
                         </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-sm-offset-4">
+                        <img alt="ICAEW" src="img/icaew_firm_logo_RGB.gif" style="height: 95px; width: auto; margin-bottom: 20px; margin-left: 50px;">
                     </div>
                 </div>
             </div>
